force-app/main/default/objects/MUSW__Query__c/MUSW__Query__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Query definitions including fields, where clause, etc</description>
    <label>Query</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>