force-app/main/default/objects/MUSW__Query__c/fields/MUSW__Fields__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fields__c</fullName>
    <label>Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>