force-app/main/default/objects/MUSW__Query__c/fields/MUSW__ORDER_BY_Direction__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ORDER_BY_Direction__c</fullName>
    <label>ORDER BY Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>