force-app/main/default/objects/MUSW__Query__c/validationRules/MUSW__Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Fields_Required</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Fields__c =""</errorConditionFormula>
    <errorDisplayField>MUSW__Fields__c</errorDisplayField>
    <errorMessage>You must specify which Fields you want the Query to return.</errorMessage>
</ValidationRule>